--- a/sftp-config.json
+++ b/sftp-config.json
@@ -15,7 +15,7 @@
     
     "host": "ftp.4-global.com",
     "user": "global",
-    "password": "4Glob@l365",
+    "password": "4Glob@l365@_glob@l",
     "port": "22",
     
     "remote_path": "/home/global/public_html/emd",
