--- a/sftp-config.json
+++ b/sftp-config.json
@@ -3,7 +3,7 @@
     // Visit http://wbond.net/sublime_packages/sftp/settings for help
     
     // sftp, ftp or ftps
-    "type": "sftp",
+    "type": "ftp",
     "save_before_upload": true,
     "upload_on_save": false,
     "sync_down_on_open": false,
@@ -16,9 +16,9 @@
     "host": "ftp.4-global.com",
     "user": "global",
     "password": "4Glob@l365@_glob@l",
-    "port": "22",
+    "port": "21",
     
-    "remote_path": "/home/global/public_html/emd",
+    "remote_path": "/www/emd",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
@@ -37,7 +37,7 @@
     
     //"preserve_modification_times": false,
     //"remote_time_offset_in_hours": 0,
-    //"remote_encoding": "utf-8",
+    "remote_encoding": "utf-8",
     //"remote_locale": "C",
     //"allow_config_upload": false,
 }
