--- a/sftp-config.json
+++ b/sftp-config.json
@@ -13,8 +13,8 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "ftp.4-global.com",
-    "user": "global",
+    "host": "datahubclub.co.uk",
+    "user": "pmihubclub",
     "password": "4Glob@l365@_glob@l",
     "port": "21",
     
